Adds object validation API paths.
